Eevee: No Motion Blur on linked objects #78561

Closed
opened 2020-07-03 04:15:14 +02:00 by Adriano Oliveira · 16 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-02 22:21, hash: 5a13f682ee

Short description of error
Local rigged characters have MB even with Shutter=0.5; BG Sep.=100; MaxB=32; Steps=1.
Same character linked in a new file has no Eevee MB with Shutter=0.5; BG Sep.=100; MaxB=32; Steps=1 (you have to raise above 1).
It seams to affect only deformeble meshs.

Exact steps for others to reproduce the error

  • Take any a charcater (local to the file). Animate its Armature. Render with Eevee MB with Shutter=0.5; BG Sep.=100; MaxB=32; Steps=1.
  • Link the same charcater to a new file. Animate its Armature. Render with Eevee MB with Shutter=0.5; BG Sep.=100; MaxB=32; Steps=1.
    or
  • Download attached files to the same directory
  • Open shot.blend
  • Render (F12)
    Only the unlinked object will have motion blur
    shot.blend
    lib.blend
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-02 22:21, hash: `5a13f682ee` **Short description of error** Local rigged characters have MB even with Shutter=0.5; BG Sep.=100; MaxB=32; Steps=1. Same character linked in a new file has no Eevee MB with Shutter=0.5; BG Sep.=100; MaxB=32; Steps=1 (you have to raise above 1). It seams to affect only deformeble meshs. **Exact steps for others to reproduce the error** - Take any a charcater (local to the file). Animate its Armature. Render with Eevee MB with Shutter=0.5; BG Sep.=100; MaxB=32; Steps=1. - Link the same charcater to a new file. Animate its Armature. Render with Eevee MB with Shutter=0.5; BG Sep.=100; MaxB=32; Steps=1. or - Download attached files to the same directory - Open `shot.blend` - Render (F12) Only the unlinked object will have motion blur [shot.blend](https://archive.blender.org/developer/F8662150/shot.blend) [lib.blend](https://archive.blender.org/developer/F8662151/lib.blend)

Added subscriber: @AdrianoOliveira

Added subscriber: @AdrianoOliveira

#79393 was marked as duplicate of this issue

#79393 was marked as duplicate of this issue
Adriano Oliveira changed title from No Eevee Motion Blur with Step 1 for linked characters to No post-process Eevee Motion Blur with linked deformeble meshes 2020-07-03 18:22:09 +02:00

I have updated the title.
With further investigation, it seams the problem is that post-process blur is not working with linked deformeble meshes. Only accumulation blur does.

I have updated the title. With further investigation, it seams the problem is that post-process blur is not working with **linked** deformeble meshes. Only accumulation blur does.

Added subscriber: @sozap

Added subscriber: @sozap

I can confirm this is happening in our production files.

Here are some test files that demonstrate the issue, lib.blend contain a rig.
shot .blend contain a cube and the rig, both are animated.

Download both files, open shot .blend and render a frame, the cube get blurred while the other that is skinned to the armature isn't blured...
shot.blend
lib.blend

As a side note, this was working in the intial commit , but once this bug https://developer.blender.org/T78073 was fixed this new issue appear ...

I can confirm this is happening in our production files. Here are some test files that demonstrate the issue, lib.blend contain a rig. shot .blend contain a cube and the rig, both are animated. Download both files, open shot .blend and render a frame, the cube get blurred while the other that is skinned to the armature isn't blured... [shot.blend](https://archive.blender.org/developer/F8662150/shot.blend) [lib.blend](https://archive.blender.org/developer/F8662151/lib.blend) As a side note, this was working in the intial commit , but once this bug https://developer.blender.org/T78073 was fixed this new issue appear ...
Germano Cavalcante changed title from No post-process Eevee Motion Blur with linked deformeble meshes to Eevee: No Motion Blur on linked objects 2020-07-07 20:17:22 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @LaStefan, @iss, @mano-wii

Added subscribers: @LaStefan, @iss, @mano-wii

Added subscriber: @krizalid55

Added subscriber: @krizalid55

Actualy its working on linked object. but if you select instance collection in linking options motion blur ignoring objects in instanced collection. Basicly character meshes are visible in outliner its getting motion blur, if not it not getting motion blur. I tested 3 different ways. But also our studio using the left side method for linking. I hope the picture is descriptive.

bug_report.jpg

Actualy its working on linked object. but if you select instance collection in linking options motion blur ignoring objects in instanced collection. Basicly character meshes are visible in outliner its getting motion blur, if not it not getting motion blur. I tested 3 different ways. But also our studio using the left side method for linking. I hope the picture is descriptive. ![bug_report.jpg](https://archive.blender.org/developer/F8758627/bug_report.jpg)
Clément Foucault was assigned by Dalai Felinto 2020-08-10 17:05:15 +02:00

Added subscribers: @dr.sybren, @dfelinto

Added subscribers: @dr.sybren, @dfelinto

A few things:

  • It indeed doesn't work for rigged linked objects.
  • What @krizalid55 suggests is a different enough workflow that doesn't really work as a workaround for this issue (instanced proxified collections).

Clément: Sybren is helping Sergey a lot with depsgraph. You can ask him for some help if the issue is not obvious (and it is depsgraph related)

A few things: * It indeed doesn't work for rigged linked objects. * What @krizalid55 suggests is a different enough workflow that doesn't really work as a workaround for this issue (instanced proxified collections). Clément: Sybren is helping Sergey a lot with depsgraph. You can ask him for some help if the issue is not obvious (and it is depsgraph related)

Added subscriber: @Sergey

Added subscriber: @Sergey

The issue comes from this workaround:

  if (!oedata->geom_update) {
    /* FIXME(fclem) There can be false positive where the actual mesh is not updated.
           * This avoids a crash but removes the motion blur from some object.
           * Maybe an issue with depsgraph tagging. */
    mb_geom->use_deform = false;
    oedata->geom_update = false;

    GPU_VERTBUF_DISCARD_SAFE(mb_geom->vbo[MB_PREV]);
    GPU_VERTBUF_DISCARD_SAFE(mb_geom->vbo[MB_NEXT]);
  }```

But this is also caused by the fact the object is not tagged with `ID_RECALC_GEOMETRY` which then triggers the above workaround.

cc @Sergey @dr.sybren 
The issue comes from this workaround: ```lang=cpp ``` if (!oedata->geom_update) { /* FIXME(fclem) There can be false positive where the actual mesh is not updated. ``` * This avoids a crash but removes the motion blur from some object. * Maybe an issue with depsgraph tagging. */ ``` mb_geom->use_deform = false; oedata->geom_update = false; ``` ``` GPU_VERTBUF_DISCARD_SAFE(mb_geom->vbo[MB_PREV]); GPU_VERTBUF_DISCARD_SAFE(mb_geom->vbo[MB_NEXT]); }``` ``` But this is also caused by the fact the object is not tagged with `ID_RECALC_GEOMETRY` which then triggers the above workaround. cc @Sergey @dr.sybren

From this brief explanation sounds like the workaround is wrong :)

Can you explain things a bit deeper? Is it something when geometry is (in)directly modified and ID->recalc does not include ID_RECALC_GEOMETRY? Do you have simple file which can be investigated from the depsgraph side?

From this brief explanation sounds like the workaround is wrong :) Can you explain things a bit deeper? Is it something when geometry is (in)directly modified and `ID->recalc` does not include `ID_RECALC_GEOMETRY`? Do you have simple file which can be investigated from the depsgraph side?

This issue was referenced by 1eab858dbc

This issue was referenced by 1eab858dbc8455d48eebcb896310efa583526207

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78561
No description provided.